--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Commit and Push Changes to Repo A
         run: |
+          cd $GITHUB_WORKSPACE  # 进入仓库根目录
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
