--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -15,12 +15,13 @@ jobs:
           wget -O addressesapi.txt https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressesapi.txt
           wget -O addressescsv.csv https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressescsv.csv
 
-      - name: Copy Files to Repo A
+      - name: Copy addressesapi.txt to Repo A
         run: |
-          echo "Copying addressesapi.txt to yxip.txt"
-          echo "$(cat addressesapi.txt)" > yxip.txt
-          echo "Copying addressescsv.csv to yxipcsv.csv"
-          echo "$(cat addressescsv.csv)" > yxipcsv.csv
+          cp addressesapi.txt ./yxip.txt
+
+      - name: Copy addressescsv.csv to Repo A
+        run: |
+          cp addressescsv.csv ./yxipcsv.csv
 
       - name: Commit and Push Changes to Repo A
         uses: stefanzweifel/git-auto-commit-action@v4
