--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -10,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK
-      uses: actions/setup-java@v3.11.0
+      - name: Set up Git
+        run: |
+          git config --global user.email "1234@gmail.com"
+          git config --global user.name "djwppm"
 
-      
+      - name: Initialize Git Repository
+        run: git init
 
       - name: Download Files from Repo B
         run: |
