--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -10,14 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Git
-        run: |
-          git config --global user.email "1234@gmail.com"
-          git config --global user.name "djwppm"
-
-      - name: Initialize Git Repository
-        run: git init
-
       - name: Download Files from Repo B
         run: |
           wget -O addressesapi.txt https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressesapi.txt
@@ -37,13 +29,9 @@ jobs:
           cat yxip.txt
           cat yxipcsv.csv
 
-      - name: Commit Changes
-        run: |
-          git add .
-          git commit -m "Sync files from Repo B"
-
-      - name: Push Changes
-        run: |
-          git remote add origin https://github.com/qfsy/yxip.git
-          git branch -M main
-          git push -u origin main
+      - name: Commit and Push Changes
+        uses: EndBug/add-and-commit@v9.1.3
+        with:
+          default_author: github_actions
+          message: 'Sync files from Repo B'
+          add: "['yxip.txt', 'yxipcsv.csv']"
