--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repo A
+        uses: actions/checkout@v2
+
       - name: Download Files from Repo B
         run: |
           wget -O addressesapi.txt https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressesapi.txt
@@ -35,3 +38,4 @@ jobs:
           default_author: github_actions
           message: 'Sync files from Repo B'
           add: "['yxip.txt', 'yxipcsv.csv']"
+
