--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -19,23 +19,14 @@ jobs:
           wget -O addressescsv.csv https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressescsv.csv
 
       - name: Copy addressesapi.txt to Repo A
-        run: |
-          cp addressesapi.txt ./yxip.txt
+        run: cp addressesapi.txt ./yxip.txt
 
       - name: Copy addressescsv.csv to Repo A
-        run: |
-          cp addressescsv.csv ./yxipcsv.csv
-
-      - name: Show Contents of Repo A
-        run: |
-          ls -l
-          cat yxip.txt
-          cat yxipcsv.csv
+        run: cp addressescsv.csv ./yxipcsv.csv
 
       - name: Commit and Push Changes
         uses: EndBug/add-and-commit@v9.1.3
         with:
           default_author: github_actions
-          message: 'Sync files from Repo B'
+          message: '同步CM优选ip'
           add: "['yxip.txt', 'yxipcsv.csv']"
-
