--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -19,10 +19,12 @@ jobs:
           wget -O addressescsv.csv https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressescsv.csv
 
       - name: Copy addressesapi.txt to Repo A
-        run: cp addressesapi.txt ./yxip.txt
+        run: |
+          cp addressesapi.txt ./yxip.txt
 
       - name: Copy addressescsv.csv to Repo A
-        run: cp addressescsv.csv ./yxipcsv.csv
+        run: |
+          cp addressescsv.csv ./yxipcsv.csv
 
       - name: Commit and Push Changes
         uses: EndBug/add-and-commit@v9.1.3
