--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -30,5 +30,5 @@ jobs:
         uses: EndBug/add-and-commit@v9.1.3
         with:
           default_author: github_actions
-          message: '同步CM优选ip'
+          message: 'UPLOAD-CMip'
           add: "['yxip.txt', 'yxipcsv.csv']"
