--- a/.github/workflows/ipdb.yml
+++ b/.github/workflows/ipdb.yml
@@ -1,4 +1,4 @@
-name: Scheduled Job
+name: 同步IPBD
 
 on:
   schedule:
@@ -13,10 +13,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.x
 
+    - name: Install requests module
+      run: pip install requests
+
     - name: Run Python script
-      run: python ipdb.py
+      run: python ipbd.py
