--- a/.github/workflows/ipdb.yml
+++ b/.github/workflows/ipdb.yml
@@ -30,4 +30,4 @@ jobs:
       run: pip install requests
 
     - name: Run Python script
-      run: python ${GITHUB_WORKSPACE}/ipbd.py
+      run: python ./ipbd.py
